# MagicaRoguelike

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: items.json  mobs.json  save.json  spells.json
src/: alert.rs  animation.rs  audio.rs  black_hole.rs  blank_spell.rs  boss_room.rs  camera.rs  chapter.rs  elements.rs  elements_ui.rs  exp_orb.rs  exp_particle.rs  exp_tank.rs  experience.rs  friend.rs  game_over.rs  gamemap.rs  gameover.rs  health.rs  health_tank.rs  health_ui.rs  hit_player.rs  hub_location.rs  invincibility.rs  item.rs  level_completion.rs  level_complition.rs  loot.rs  main.rs  main_menu.rs  mob.rs  mouse_position.rs  obstacles.rs  particles.rs  pathfinding.rs  pause.rs  player.rs  projectile.rs  save.rs  shield_spell.rs  (+3 more)
src/items/: amulet.rs  bacon.rs  blind_rage.rs  blood_goblet.rs  ghost_in_the_shell.rs  heart.rs  lizard_tail.rs  mod.rs  resistance_items.rs  speed_potion.rs  spell_unlock_items.rs  vampire_tooth.rs
src/mobs/: boss_behaviour.rs  mob.rs  mob_animation.rs  mob_movement.rs  mob_spawn.rs  mod.rs
src/mobs/mob_types/: mob_type_boss.rs  mob_type_mage.rs  mob_type_melee.rs  mob_type_orbital.rs  mob_type_range.rs  mob_type_spawner.rs  mob_type_special.rs  mob_type_turret.rs  mod.rs
src/ui/: Loading_screen_ui.rs  debug_console.rs  elements_ui.rs  experience_ui.rs  health_ui.rs  item_ui.rs  loading_screen_ui.rs  main_menu.rs  mod.rs  pause_ui.rs
